--- a/src/app/shared/components/fairs-cards/fairs-cards.component.html
+++ b/src/app/shared/components/fairs-cards/fairs-cards.component.html
@@ -1,6 +1,6 @@
 <div class="card m-4" (click)="onFairClick()">
     <div class="card-body">
-        <h5>{{getFairCard.fairName}}</h5>
+        <h5>{{getFairCard.fairName | uppercase }}</h5>
         <div class="content">
             <p class="m-0">Fair Type : {{getFairCard.type}}</p>
             <p class="m-0">Fair Date : {{getFairCard.startDate | date}}</p>
